# prism-game

./: .gitignore  Cargo.toml  README.md  wrangler.toml
.github/workflows/: deploy.yml
docs/: DEVELOPMENT_ROADMAP.md  ENEMY_WAVE_DESIGN.md  GENRE_GAP_ANALYSIS.md  REVIEW_SYNTHESIS.md
src/: entities.rs  game.rs  lib.rs  math.rs  shards.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: input.ts  main.ts  renderer.ts  shaders.ts
